Fix page z-index

--- a/assets/www/stylesheet/bike_me.css
+++ b/assets/www/stylesheet/bike_me.css
@@ -30,7 +30,7 @@ body {
 }
 
 .ui-page {
-  z-index: -2;
+  z-index: 2;
 }
 
 #location-button {
